--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -24,8 +24,8 @@
 
 .modal__button {
   position: absolute;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   top: 8px;
   right: 8px;
   padding: 0;
@@ -39,5 +39,9 @@
 .modalImg {
   display: block;
   width: 100%;
- 
+}
+
+.modlButtonAi{
+    width: 100%;
+  height: 100%;
 }
